--- a/src/assets/style/min.scss
+++ b/src/assets/style/min.scss
@@ -25,9 +25,9 @@
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
     .index-control{
-      width: 50%;
+      width: px2rem(180);
       height: px2rem(200);
       background: white;
       box-sizing: border-box;
@@ -66,7 +66,19 @@
   }
 }
 
-
+.information-entry{
+  width: 100%;
+  .information-entry-tj{
+    width: 100%;
+    height: px2rem(100);
+    background: white;
+    @include center;
+    .information-entry-tj-wrapper{
+      width: px2rem(100);
+      height: px2rem(30);
+    }
+  }
+}
 
 
 
