完成发布、我的发布、通知公告、最新发布

--- a/src/assets/style/global.scss
+++ b/src/assets/style/global.scss
@@ -19,6 +19,9 @@ $ration: 375 / 10;
   justify-content: flex-end;
   align-items: center;
 }
+.nav-bar-wrapper{
+  width: 100%;
+}
 .top-bar{
   height: px2rem(50);
 }
