--- a/src/assets/style/reset.scss
+++ b/src/assets/style/reset.scss
@@ -47,3 +47,8 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+a{
+  display: block;
+  text-decoration: none;
+  color: black;
+}
